--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -8,5 +8,13 @@
 </head>
 <body>
   <div id='root'></div>
+  <style>
+    #root {
+      display: flex;
+      flex-direction: column;
+
+      min-height: 100vh;
+    }
+  </style>
 </body>
 </html>
